# alphax

./: .gitignore  README.md  pyproject.toml  train.py
src/: chance.py  inference.py  network.py  train.py
src/mcts/: action_selection.py  base.py  policies.py  qtransforms.py  search.py  seq_halving.py  tree.py
